--- a/template/package.json
+++ b/template/package.json
@@ -2,13 +2,13 @@
   "name": "litw-privacy-iot",
   "version": "0.1.0",
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "expose-loader": "^0.7.1",
-    "handlebars": "^4.7.6",
-    "handlebars-loader": "^1.4.0",
+    "bootstrap": "^3.4.1",
+    "expose-loader": "^0.7.5",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
     "jquery": "2.2.0",
     "jquery-ui-bundle": "^1.11.4",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,5 +24,8 @@
   "author": "",
   "license": "ISC",
   "homepage": "https://bitbucket.org/LITW-core/litw-studytemplate#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
+  }
 }
